src/assets/stylesheets/_card.scss
.pia-cardsBlock {
    width: 276px;
    display: inline-block;
    vertical-align: top;
    position: relative;
    margin-right: 12px;
    margin-bottom: 40px;
    height: 370px;
    border: 1px solid #fff;
    background-color: #fff;
    &-title {
      height: 23px;
    }
    &-header-title {
      border-bottom: 1px solid $pia-green;
      color: $pia-green;
      height: 20px;
      margin-top: -30px;
      margin-bottom: 10px;
      font-weight: 500;
    }
    &-item {
      padding: 9px;
      background-color: #fff;
      padding-top: 6px;
      height: 368px;
      &-attachment {
        display: inline-block;
        position: absolute;
        vertical-align: middle;
        left: 6px;
        cursor: pointer;
        ul {
          display: none;
          position: absolute;
          z-index: 999;
          top: 18px;
          left: 2px;
          font-size: 1rem;
          color: $pia-gray-dark;
          background-color: #fff;
          text-align: center;
          min-width: 100px;
          margin: 10px 0;
          padding: 2px 4px;
          box-shadow: 1px 1px 2px 1px rgba(214, 212, 214, 1);
          li {
            list-style-type: none;
            margin: 0;
            padding: 0;
            border-bottom: 1px dotted $pia-gray-dark;
            padding: 2px 0;
            &:last-child {
              border-bottom: none;
            }
          }
        }
        &:focus, &:hover, &:active {
          ul {
            display: block;
          }
        }
      }
      &-status {
        margin-top: 5px;
        &-infos {
          width: 150px;
          div {
            color: $pia-gray;
            font-size: 1rem;
            margin-bottom: -1px;
            font-style: italic;
            &:last-child {
              font-size: 1.45rem;
              color: $pia-dark-black;
            }
          }
          .pendingValidation {
            margin-bottom: -20px;
            padding-right: 12px;
          }
        }
        &-infos, &-progressBar {
          display: inline-block;
          vertical-align: top;
        }
        &-progressBar {
          width: 100px;
          text-align: right;
          div {
            color: $pia-green;
            font-style: italic;
            text-align: right;
            font-size: 1rem;
          }
          progress {
            width: 100%;
            position: relative;
            margin-top: 5px;
            &:after {
              position: absolute;
              left: 0;
              top: 50%;
              content: '';
              height: 12px;
              width: 1px;
              margin-top: -6px;
              background-color: $pia-green;
            }
            &:before {
              position: absolute;
              content: '';
              left: 0;
              right: 0;
              top: 50%;
              height: 1px;
              background-color: $pia-green;
            }
          }
          progress[value] {
            background-color: #fff;
            height: 12px;
            &::-webkit-progress-bar {
              background-color: #fff;
            }
            &::-webkit-progress-value {
              background-color: $pia-green;
            }
          }
        }
        &-refused {
          color: $pia-red !important;
        }
      }
      &-form {
          div {
              label {
                  color: $pia-gray;
                  font-size: 0.95rem;
                  font-style: italic;
              }
              input {
                  padding-bottom: 6px;
                  display: block;
                  border: 0;
                  font-size: 1.4rem;
                  color: $pia-dark-black;
                  width: 100%;
                  background-color: $pia-white;
                  margin-top: -2px;
                  height: 22px;
                  &::placeholder {
                      color: $pia-gray;
                  }
              }
              &:first-child {
                  input {
                      margin-top: 0;
                      font-size: 2.1rem;
                      padding-bottom: 23px;
                      height: auto;
                  }
              }
          }
          &-attachment {
              position: relative;
              display: inline-block;
              button {
                  font-size: 1rem;
                  color: $pia-gray;
                  background-color: #fff;
                  display: none;
                  position: absolute;
                  bottom: -14px;
                  left: -50%;
                  text-align: center;
                  width: 78px;
                  padding: 2px 4px;
                  -webkit-box-shadow: 1px 1px 2px 1px rgba(204,202,204,1);
                  -moz-box-shadow: 1px 1px 2px 1px rgba(204,202,204,1);
                  box-shadow: 1px 1px 2px 1px rgba(204,202,204,1);
              }
              &:focus, &:hover, &:active {
                  button {
                      display: block;
                  }
              }
          }
      }
      &-date {
          div {
              color: $pia-gray;
              font-size: 1rem;
              margin-bottom: -1px;
              &:first-child {
                  font-style: italic;
              }
          }
          time {
              font-size: 1.45rem;
              color: $pia-dark-black;
          }
      }
      &-btn {
          border-top: 1px solid $pia-green;
          padding-top: 21px;
          margin-top: 21px;
          text-align: center;
          margin-bottom: 15px;
          a, button {
              border-radius: 20px;
              border: 1px solid;
              padding: 9px 20px;
              display: inline-block;
          }
          a {
            text-decoration: none;
            padding: 5.5px 21px;
          }
      }
    }
    &-toolbar {
        font-size: 1.45rem;
        float: right;
        a, button {
          color: $pia-green;
          .fa {
            margin: 0 3px;
          }
        }
        > div {
          display: inline-block;
          vertical-align: top;
          position: relative;
        }
        &-more {
          position: relative;
           > a {
            &:focus, &:hover, &:active {
              cursor: context-menu;
              .pia-cardsBlock-toolbar-moreList {
                display: block;
              }
            }
          }
        }
        &-moreList {
            z-index: 999;
            margin: 0;
            padding: 0;
            display: none;
            position: absolute;
            left: 15px;
            top: -6px;
            padding-left: 15px;
            background-color: #fff;
            width: 125px;
            li {
                width: 100%;
                padding-left: 15px;
                list-style-type: none;
                color: $pia-green;
                padding: 0;
                background-color: #fff;
                padding-left: 10px;
                text-align: left;
                .fa, a {
                    display: inline-block;
                    vertical-align: middle;
                    font-size: 1rem;
                }
                .fa {
                    margin-right: 3px;
                }
                a {
                    text-align: left;
                    padding: 2px;
                    text-decoration: none;
                    line-height: 1;
                    font-size: 1.2rem;
                }
                &:focus, &:hover, &:active {
                    color: #fff;
                    background-color: $pia-green;
                    a {
                        color: #fff;
                    }
                }
            }
        }
    }
}

